Se creo una pagina generica para mostrar productos

--- a/front/agregados.html
+++ b/front/agregados.html
@@ -51,11 +51,11 @@
 </nav>
 
 <br>
-<div class="row row-cols-1 row-cols-md-3 g-4 align-items-stretch">
+<div class="row row-cols-1 row-cols-md-3 g-4 align-items-stretch container-cards">
   <!-- Card 1 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/agregados/cacao.webp" class="card-img-top" alt="Cáscara de Cacao">
         <div class="card-body">
           <h5 class="card-title">Cáscara de Cacao (100gr)</h5>
@@ -76,7 +76,7 @@
   <!-- Card 2 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/agregados/coco.webp" class="card-img-top" alt="Chips de Coco">
         <div class="card-body">
           <h5 class="card-title">Chips de Coco (100gr)</h5>
@@ -97,7 +97,7 @@
   <!-- Card 3 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/agregados/Jengibre.webp" class="card-img-top" alt="Jengibre Deshidratado">
         <div class="card-body">
           <h5 class="card-title">Jengibre Deshidratado (100gr)</h5>
@@ -118,7 +118,7 @@
   <!-- Card 4 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/agregados/pack de agregados.jpg" class="card-img-top" alt="Pack Blend Malaya (Menta, Limón, Jengibre y Pétalos de Rosa)">
         <div class="card-body">
           <h5 class="card-title">Pack Blend Malaya (Menta, Limón, Jengibre y Pétalos de Rosa)</h5>
@@ -139,7 +139,7 @@
   <!-- Card 5 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/agregados/pack de agregados2.jpg" class="card-img-top" alt="Pack Blend Malaya (Boldo, Cedrón, Caléndula y Canela)">
         <div class="card-body">
           <h5 class="card-title">Pack Blend Malaya (Boldo, Cedrón, Caléndula y Canela)</h5>
