--- a/front/bombilla_mate.html
+++ b/front/bombilla_mate.html
@@ -51,11 +51,11 @@
 </nav>
 
 <br>
-<div class="row row-cols-1 row-cols-md-3 g-4 align-items-stretch">
+<div class="row row-cols-1 row-cols-md-3 g-4 align-items-stretch container-cards">
   <!-- Card 1 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/bombilla/bombilla1.jpeg" class="card-img-top" alt="Bombilla Clásica Lisa">
         <div class="card-body">
           <h5 class="card-title">Bombilla Clásica Lisa</h5>
@@ -76,7 +76,7 @@
   <!-- Card 2 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/bombilla/bombilla2.jpeg" class="card-img-top" alt="Bombilla de Acero con Filtro Cuchara">
         <div class="card-body">
           <h5 class="card-title">Bombilla de Acero con Filtro Cuchara</h5>
@@ -97,7 +97,7 @@
   <!-- Card 3 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/bombilla/bombilla3.jpeg" class="card-img-top" alt="Bombilla Pico Plano Tradicional">
         <div class="card-body">
           <h5 class="card-title">Bombilla Pico Plano Tradicional</h5>
@@ -118,7 +118,7 @@
   <!-- Card 4 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/bombilla/bombilla4.jpeg" class="card-img-top" alt="Bombilla Premium Grabada">
         <div class="card-body">
           <h5 class="card-title">Bombilla Premium Grabada</h5>
@@ -139,7 +139,7 @@
   <!-- Card 5 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/bombilla/bombilla5.jpeg" class="card-img-top" alt="Bombilla con Filtro Cuchara Larga">
         <div class="card-body">
           <h5 class="card-title">Bombilla con Filtro Cuchara Larga</h5>
@@ -160,7 +160,7 @@
   <!-- Card 6 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/bombilla/bombilla6.jpeg" class="card-img-top" alt="Bombilla Bolitas de Acero">
         <div class="card-body">
           <h5 class="card-title">Bombilla Bolitas de Acero</h5>
@@ -181,7 +181,7 @@
   <!-- Card 7 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/bombilla/bombilla7.jpeg" class="card-img-top" alt="Bombilla Pico Plano Curva">
         <div class="card-body">
           <h5 class="card-title">Bombilla Pico Plano Curva</h5>
@@ -202,7 +202,7 @@
   <!-- Card 8 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/bombilla/bombilla8.jpeg" class="card-img-top" alt="Bombilla con Rosca y Platillo">
         <div class="card-body">
           <h5 class="card-title">Bombilla con Rosca y Platillo</h5>
@@ -223,7 +223,7 @@
   <!-- Card 9 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/bombilla/bombilla9.png" class="card-img-top" alt="Bombilla de acero con Punta Metálica">
         <div class="card-body">
           <h5 class="card-title">Bombilla de acero con Punta Metálica</h5>
@@ -244,7 +244,7 @@
   <!-- Card 10 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/bombilla/bombilla10.png" class="card-img-top" alt="Bombilla de Hierro con Pico Redondo">
         <div class="card-body">
           <h5 class="card-title">Bombilla de Hierro con Pico Redondo</h5>
