--- a/front/kits_completos_para_principiantes.html
+++ b/front/kits_completos_para_principiantes.html
@@ -51,11 +51,11 @@
 </nav>
 
 <br>
-<div class="row row-cols-1 row-cols-md-3 g-4 align-items-stretch">
+<div class="row row-cols-1 row-cols-md-3 g-4 align-items-stretch container-cards">
   <!-- Card 1 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/kits completos de mate/kits completos de mate1.jpeg" class="card-img-top" alt="Kit Matero Clásico con Mochila Verde">
         <div class="card-body">
           <h5 class="card-title">Kit Matero Clásico con Mochila Verde</h5>
@@ -76,7 +76,7 @@
   <!-- Card 2 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/kits completos de mate/kits completos de mate2.jpeg" class="card-img-top" alt="Kit Matero Ejecutivo Negro">
         <div class="card-body">
           <h5 class="card-title">Kit Matero Ejecutivo Negro</h5>
@@ -97,7 +97,7 @@
   <!-- Card 3 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/kits completos de mate/kits completos de mate3.jpeg" class="card-img-top" alt="Kit Matero Marrón con Estuche de Cuero">
         <div class="card-body">
           <h5 class="card-title">Kit Matero Marrón con Estuche de Cuero</h5>
@@ -118,7 +118,7 @@
   <!-- Card 4 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/kits completos de mate/kits completos de mate4.jpeg" class="card-img-top" alt="Kit Matero Edición Mosaico">
         <div class="card-body">
           <h5 class="card-title">Kit Matero Edición Mosaico</h5>
@@ -139,7 +139,7 @@
   <!-- Card 5 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/kits completos de mate/kits completos de mate5.jpeg" class="card-img-top" alt="Kit Matero Mochila Outdoor">
         <div class="card-body">
           <h5 class="card-title">Kit Matero Mochila Outdoor</h5>
@@ -160,7 +160,7 @@
   <!-- Card 6 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/kits completos de mate/kits completos de mate6.jpeg" class="card-img-top" alt="Kit Matero Minimalista Negro">
         <div class="card-body">
           <h5 class="card-title">Kit Matero Minimalista Negro</h5>
@@ -181,7 +181,7 @@
   <!-- Card 7 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/kits completos de mate/kits completos de mate7.jpeg" class="card-img-top" alt="Kit Matero Pauny con Mate Amarillo">
         <div class="card-body">
           <h5 class="card-title">Kit Matero Pauny con Mate Amarillo</h5>
@@ -202,7 +202,7 @@
   <!-- Card 8 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/kits completos de mate/kits completos de mate8.jpeg" class="card-img-top" alt="Kit Matero Familiar Negro">
         <div class="card-body">
           <h5 class="card-title">Kit Matero Familiar Negro</h5>
@@ -223,7 +223,7 @@
   <!-- Card 9 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/kits completos de mate/kits completos de mate9.jpeg" class="card-img-top" alt="Kit Matero Verde Militar Premium">
         <div class="card-body">
           <h5 class="card-title">Kit Matero Verde Militar Premium</h5>
@@ -244,7 +244,7 @@
   <!-- Card 10 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/kits completos de mate/kits completos de mate10.jpeg" class="card-img-top" alt="Kit Matero Premium de Cuero Marrón">
         <div class="card-body">
           <h5 class="card-title">Kit Matero Premium de Cuero Marrón</h5>
