--- a/front/mate.html
+++ b/front/mate.html
@@ -51,11 +51,11 @@
 </nav>
 <br>
 
-<div class="row row-cols-1 row-cols-md-3 g-4 align-items-stretch">
+<div class="row row-cols-1 row-cols-md-3 g-4 align-items-stretch container-cards">
   <!-- Card 1 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/mate/mate1.jpeg" class="card-img-top" alt="Mate de madera con caja">
         <div class="card-body">
           <h5 class="card-title">Mate de madera con caja</h5>
@@ -76,7 +76,7 @@
   <!-- Card 2 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/mate/mate3.jpeg" class="card-img-top" alt="Mate Stanley azul">
         <div class="card-body">
           <h5 class="card-title">Mate Stanley azul</h5>
@@ -97,7 +97,7 @@
   <!-- Card 3 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/mate/mate2.jpeg" class="card-img-top" alt="Mate metálico dorado martillado">
         <div class="card-body">
           <h5 class="card-title">Mate metálico dorado martillado</h5>
@@ -118,7 +118,7 @@
   <!-- Card 4 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/mate/mate4.jpeg" class="card-img-top" alt="Mate forrado en cuero lila">
         <div class="card-body">
           <h5 class="card-title">Mate forrado en cuero lila</h5>
@@ -139,7 +139,7 @@
   <!-- Card 5 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/mate/mate5.jpeg" class="card-img-top" alt="Mate de madera torneada simple">
         <div class="card-body">
           <h5 class="card-title">Mate de madera torneada simple</h5>
@@ -160,7 +160,7 @@
   <!-- Card 6 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/mate/mate6.jpeg" class="card-img-top" alt="Mate de calabaza con base de cuero">
         <div class="card-body">
           <h5 class="card-title">Mate de calabaza con base de cuero</h5>
@@ -181,7 +181,7 @@
   <!-- Card 7 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/mate/mate7.jpeg" class="card-img-top" alt="Mate de madera con virola grabada">
         <div class="card-body">
           <h5 class="card-title">Mate de madera con virola grabada</h5>
@@ -202,7 +202,7 @@
   <!-- Card 8 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/mate/mate8.jpeg" class="card-img-top" alt="Mate de calabaza con virola y pie metálico">
         <div class="card-body">
           <h5 class="card-title">Mate de calabaza con virola y pie metálico</h5>
@@ -223,7 +223,7 @@
   <!-- Card 9 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/mate/mate9.jpeg" class="card-img-top" alt="Mate de acero inoxidable rosa">
         <div class="card-body">
           <h5 class="card-title">Mate de acero inoxidable rosa</h5>
@@ -244,7 +244,7 @@
   <!-- Card 10 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/mate/mate10.png" class="card-img-top" alt="Mate de cerámica blanco">
         <div class="card-body">
           <h5 class="card-title">Mate de cerámica blanco</h5>
