--- a/front/tienda.html
+++ b/front/tienda.html
@@ -51,11 +51,11 @@
 </nav>
 
 <br>
-<div class="row row-cols-1 row-cols-md-3 g-4 align-items-stretch">
+<div class="row row-cols-1 row-cols-md-3 g-4 align-items-stretch container-cards">
   <!-- Card 1 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/agregados/Jengibre.webp" class="card-img-top" alt="Jengibre Deshidratado">
         <div class="card-body">
           <h5 class="card-title">Jengibre Deshidratado (100gr)</h5>
@@ -78,7 +78,7 @@
   <!-- Card 2 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/bombilla/bombilla5.jpeg" class="card-img-top" alt="Bombilla con Filtro Cuchara Larga">
         <div class="card-body">
           <h5 class="card-title">Bombilla con Filtro Cuchara Larga</h5>
@@ -101,7 +101,7 @@
   <!-- Card 3 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/kits completos de mate/kits completos de mate9.jpeg" class="card-img-top" alt="Kit Matero Verde Militar Premium">
         <div class="card-body">
           <h5 class="card-title">Kit Matero Verde Militar Premium</h5>
@@ -124,7 +124,7 @@
   <!-- Card 4 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/yerba/yerba10.jpeg" class="card-img-top" alt="Yerba Jesper a Granel">
         <div class="card-body">
           <h5 class="card-title">Yerba Jesper a Granel</h5>
@@ -147,7 +147,7 @@
   <!-- Card 5 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/mate/mate10.png" class="card-img-top" alt="Mate de cerámica blanco">
         <div class="card-body">
           <h5 class="card-title">Mate de cerámica blanco</h5>
