--- a/front/yerbas.html
+++ b/front/yerbas.html
@@ -51,11 +51,11 @@
 </nav>
 
 <br>
-<div class="row row-cols-1 row-cols-md-3 g-4 align-items-stretch">
+<div class="row row-cols-1 row-cols-md-3 g-4 align-items-stretch container-cards">
   <!-- Card 1 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/yerba/yerba1.jpeg" class="card-img-top" alt="Yerba Larga Vida Orgánica">
         <div class="card-body">
           <h5 class="card-title">Yerba Larga Vida Orgánica (500gr)</h5>
@@ -78,7 +78,7 @@
   <!-- Card 2 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/yerba/yerba2.jpeg" class="card-img-top" alt="Yerba Rosamonte">
         <div class="card-body">
           <h5 class="card-title">Yerba Rosamonte (1kg)</h5>
@@ -101,7 +101,7 @@
   <!-- Card 3 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/yerba/yerba3.jpeg" class="card-img-top" alt="Yerba Matenki Digestiva">
         <div class="card-body">
           <h5 class="card-title">Yerba Matenki Digestiva (500gr)</h5>
@@ -124,7 +124,7 @@
   <!-- Card 4 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/yerba/yerba4.jpeg" class="card-img-top" alt="Yerba Atiguá Orgánica">
         <div class="card-body">
           <h5 class="card-title">Yerba Atiguá Orgánica (500gr)</h5>
@@ -147,7 +147,7 @@
   <!-- Card 5 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/yerba/yerba5.jpeg" class="card-img-top" alt="Yerba Ajedrez a Granel">
         <div class="card-body">
           <h5 class="card-title">Yerba Ajedrez a Granel (bolsa 10kg)</h5>
@@ -170,7 +170,7 @@
   <!-- Card 6 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/yerba/yerba6.jpeg" class="card-img-top" alt="Yerba Eco Orgánico con Cáñamo">
         <div class="card-body">
           <h5 class="card-title">Yerba Eco Orgánico con Cáñamo (500gr)</h5>
@@ -193,7 +193,7 @@
   <!-- Card 7 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/yerba/yerba7.jpeg" class="card-img-top" alt="Yerba Antonia Molida">
         <div class="card-body">
           <h5 class="card-title">Yerba Antonia Molida (500gr)</h5>
@@ -216,7 +216,7 @@
   <!-- Card 8 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/yerba/yerba8.jpeg" class="card-img-top" alt="Yerba Cósmico Premium">
         <div class="card-body">
           <h5 class="card-title">Yerba Cósmico Premium (500gr)</h5>
@@ -239,7 +239,7 @@
   <!-- Card 9 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/yerba/yerba9.jpeg" class="card-img-top" alt="Yerba Itabó Elaborada">
         <div class="card-body">
           <h5 class="card-title">Yerba Itabó Elaborada (500gr)</h5>
@@ -262,7 +262,7 @@
   <!-- Card 10 -->
   <div class="col">
     <div class="card h-100">
-      <a href="#" class="text-decoration-none text-dark">
+      <a href="./producto.html" class="text-decoration-none text-dark">
         <img src="./img/yerba/yerba10.jpeg" class="card-img-top" alt="Yerba Jesper a Granel">
         <div class="card-body">
           <h5 class="card-title">Yerba Jesper a Granel (bolsa 10kg)</h5>
