--- a/front/tienda.html
+++ b/front/tienda.html
@@ -7,22 +7,19 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg bg-success p-3">
+<nav class="navbar navbar-expand-lg bg-success navbar-dark p-3">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">El Club del Mate</a>
+    <a class="navbar-brand" href="./index.html">El Club del Mate</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Historia y Cultura</a>
+          <a class="nav-link" aria-current="page" href="./index.html">Inicio</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Tienda Online
           </a>
           <ul class="dropdown-menu">
@@ -36,15 +33,12 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Academia & Tutoriales</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link" href="./contacto.html">Contacto</a>
         </li>
       </ul>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search"/>
-        <button class="btn btn-outline-success-bg-secondary p-3" type="submit">Buscar</button>
+        <button class="btn btn-outline-success-bg-secondary p-3 text-white" type="button">Buscar</button>
       </form>
     </div>
   </div>
@@ -167,6 +161,12 @@
     </div>
   </div>
 </div>
+
+
+  <!-- Footer -->
+  <footer class="bg-success text-white text-center py-3 mt-5">
+    &copy; 2025 El Club del Mate. Todos los derechos reservados.
+  </footer>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
