--- a/front/contacto.html
+++ b/front/contacto.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -149,7 +150,7 @@ document.getElementById("contactForm").addEventListener("submit", async function
     if (response.ok) {
       resultado.textContent = "✅ El mensaje se ha enviado correctamente.";
       resultado.className = "text-success fw-bold mt-3";
-      document.getElementById("formContacto").reset(); // limpia el form
+      document.getElementById("contactForm").reset(); // limpia el form
     } else {
       resultado.textContent = "❌ Ha ocurrido un error al enviar.";
       resultado.className = "text-danger fw-bold mt-3";
@@ -165,6 +166,5 @@ document.getElementById("contactForm").addEventListener("submit", async function
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </body>
 </html>
