--- a/front/index.html
+++ b/front/index.html
@@ -41,6 +41,11 @@
         <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search"/>
         <button class="btn btn-outline-success-bg-secondary p-3 text-white" type="button">Buscar</button>
       </form>
+      <ul class="navbar-nav ms-3">
+        <li class="nav-item">
+          <a class="nav-link" href="./login.html">Iniciar sesión</a>
+        </li>
+      </ul>
     </div>
   </div>
 </nav>
