--- a/front/gracias.html
+++ b/front/gracias.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
+    <title>Gracias por tu contacto!</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/styles.css">
+    <style>
+      html, body {
+        height: 100%;
+      }
+      body {
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+      }
+      main {
+        flex: 1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+    </style>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-success navbar-dark p-3">
@@ -46,63 +62,15 @@
 </nav>
 
 
-<div class="container d-flex justify-content-center align-items-center min-vh-50 contactForm">
-  <div class="col-md-6">
-    <!-- Título y texto centrados -->
-    <div class="text-center mb-4">
-      <h2>¡Contáctanos!</h2>
-      <p class="text-muted">
-        Nos encantaría saber de ti. <br>
-        Completa el formulario y te responderemos lo antes posible.<br>
-        Tu opinión y consultas son muy importantes para nosotros. 😊
-      </p>
-    </div>
-
-    <!-- Formulario -->
-    <form id="contactForm" class="row g-3 shadow p-4 rounded bg-light" action="https://formsubmit.co/gerardocatalas@yahoo.com" method="POST">
-
-      
-      <!-- Nombre y Apellido en la misma fila -->
-      <div class="col-md-6">
-        <label for="inputNombre" class="form-label">Nombre</label>
-        <input type="text" class="form-control" id="inputNombre" name="nombre" maxlength="200" placeholder="Tu nombre" required>
-      </div>
-      <div class="col-md-6">
-        <label for="inputApellido" class="form-label">Apellido</label>
-        <input type="text" class="form-control" id="inputApellido" name="apellido" maxlength="200" placeholder="Tu apellido" required>
-      </div>
-
-      <!-- Email -->
-      <div class="col-12">
-        <label for="inputEmail" class="form-label">Email</label>
-        <input type="email" class="form-control" id="inputEmail" name="email" maxlength="200" placeholder="ejemplo@correo.com" required>
-      </div>
-
-      <!-- Asunto -->
-      <div class="col-12">
-        <label for="inputAsunto" class="form-label">Asunto</label>
-        <input type="text" class="form-control" id="inputAsunto" name="asunto" maxlength="200" placeholder="Escribe el asunto" required>
-      </div>
-
-      <!-- Mensaje -->
-      <div class="col-12">
-        <label for="inputMensaje" class="form-label">Mensaje</label>
-        <textarea class="form-control" id="inputMensaje" rows="5" name="mensaje" placeholder="Escribe tu mensaje aquí..." required></textarea>
-      </div>
-
-      <!-- Campos Ocultos de Formsubmit -->
-      <input type="hidden" name="_subject" value="Nuevo mensaje desde El Club del Mate">
-      <input type="hidden" name="_captcha" value="false">
-      <input type="hidden" name="_next" value="./gracias.html">
-
-      <!-- Botón -->
-      <div class="col-12">
-        <button type="submit" class="btn btn-success w-100">Enviar</button>
-      </div>
-
-    </form>
+<main>
+  <div class="text-center">
+    <h2>¡Gracias por tu contacto!</h2>
+    <p class="text-muted">
+      Hemos recibido tu mensaje y nos pondremos en contacto contigo muy pronto. <br>
+      Mientras tanto, ¡seguí disfrutando de la cultura del mate! 😊
+    </p>
   </div>
-</div>
+</main>
 
 
   <!-- Footer -->
