--- a/front/index.html
+++ b/front/index.html
@@ -45,82 +45,96 @@
   </div>
 </nav>
 
-<div id="carouselExample" class="carousel slide">
+<!-- Carousel -->
+<div id="carouselExample" class="carousel slide mb-5" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="./img/img1_carusel.png" class="d-block w-100" alt="...">
+      <img src="./img/img1_carusel.png" class="d-block w-100" alt="Imagen 1">
     </div>
     <div class="carousel-item">
-      <img src="./img/img2_carusel.png" class="d-block w-100" alt="...">
+      <img src="./img/img2_carusel.png" class="d-block w-100" alt="Imagen 2">
     </div>
     <div class="carousel-item">
-      <img src="./img/img3_carusel.png" class="d-block w-100" alt="...">
+      <img src="./img/img3_carusel.png" class="d-block w-100" alt="Imagen 3">
     </div>
     <div class="carousel-item">
-      <img src="./img/img4_carusel.png" class="d-block w-100" alt="...">
+      <img src="./img/img4_carusel.png" class="d-block w-100" alt="Imagen 4">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
+    <span class="visually-hidden">Anterior</span>
   </button>
   <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
+    <span class="visually-hidden">Siguiente</span>
   </button>
 </div>
-  <div class="container">
-    <!-- Texto a la izquierda -->
-    <div class="text-section">
-      <h2>Porque se creo</h2>
+
+<!-- Sección 1: Porque se creó -->
+<div class="container mb-5">
+  <div class="row align-items-center">
+    <div class="col-md-6">
+      <h2>Porque se creó</h2>
       <p>
-        En El Club del Mate creemos que tomar mate es más que una costumbre: es compartir, conversar y estar juntos. <br> Creamos este espacio para que cada cebada tenga una historia que contar
-        y cada sorbo sea un momento para disfrutar.
+        En El Club del Mate creemos que tomar mate es más que una costumbre: es compartir, conversar y estar juntos. 
+        Creamos este espacio para que cada cebada tenga una historia que contar y cada sorbo sea un momento para disfrutar.
       </p>
     </div>
-
-    <!-- Imagen a la derecha -->
-    <img src="img/img1_carusel.png" alt="Persona comiendo pizza">
+    <div class="col-md-6">
+      <img src="./img/img1_carusel.png" class="img-fluid rounded" alt="Persona tomando mate">
+    </div>
   </div>
-  <div class="container">
-    <!-- Imagen -->
-    <img src="img/img2_carusel.png" alt="Persona comiendo pizza">
+</div>
 
-    <!-- Texto -->
-    <div class="text-section">
+<!-- Sección 2: Sobre nosotros (imagen izquierda, texto derecha) -->
+<div class="container mb-5">
+  <div class="row align-items-center flex-md-row-reverse">
+    <div class="col-md-6">
       <h2>Sobre nosotros</h2>
       <p>
-        Un sitio creado para los que disfrutan de un buen mate. <br> Historias, consejos, recetas y todo lo que rodea a nuestra infusión más querida. <br>
+        Un sitio creado para los que disfrutan de un buen mate. Historias, consejos, recetas y todo lo que rodea a nuestra infusión más querida.
         Compartimos la pasión por el mate y todo lo que lo acompaña.
       </p>
     </div>
+    <div class="col-md-6">
+      <img src="./img/img2_carusel.png" class="img-fluid rounded" alt="Persona tomando mate">
+    </div>
   </div>
-   <div class="container">
-    <!-- Texto a la izquierda -->
-    <div class="text-section">
+</div>
+
+<!-- Sección 3: Comunidad -->
+<div class="container mb-5">
+  <div class="row align-items-center">
+    <div class="col-md-6">
       <h2>Comunidad</h2>
       <p>
-        Tips de cebado, curiosidades de la yerba, recetas con mate y experiencias de nuestros socios. <br>
+        Tips de cebado, curiosidades de la yerba, recetas con mate y experiencias de nuestros socios. 
         Únete a nuestra comunidad y comparte tu amor por el mate con otros entusiastas.
       </p>
     </div>
-
-    <!-- Imagen a la derecha -->
-    <img src="img/img3_carusel.png" alt="Persona comiendo pizza">
+    <div class="col-md-6">
+      <img src="./img/img3_carusel.png" class="img-fluid rounded" alt="Comunidad de mate">
+    </div>
   </div>
-  <div class="container">
-    <!-- Imagen -->
-    <img src="img/img3_carusel.png" alt="Persona comiendo pizza">
+</div>
 
-    <!-- Texto -->
-    <div class="text-section">
-      <h2>Nuestos productos</h2>
+<!-- Sección 4: Nuestros productos -->
+<div class="container mb-5">
+  <div class="row align-items-center flex-md-row-reverse">
+    <div class="col-md-6">
+      <h2>Nuestros productos</h2>
       <p>
-       Mates artesanales, bombillas de acero inoxidable, yerbas seleccionadas, termos de calidad. <br>
+        Mates artesanales, bombillas de acero inoxidable, yerbas seleccionadas, termos de calidad. 
         Todo lo que necesitas para disfrutar del mate en cualquier momento y lugar.
       </p>
     </div>
+    <div class="col-md-6">
+      <img src="./img/img4_carusel.png" class="img-fluid rounded" alt="Productos de mate">
+    </div>
   </div>
+</div>
+
 
   
   <!-- Footer -->
