--- a/front/bombilla_mate.html
+++ b/front/bombilla_mate.html
@@ -34,6 +34,9 @@
           </ul>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="./quienes-somos.html">Quiénes Somos</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="./contacto.html">Contacto</a>
         </li>
       </ul>
