--- a/front/login.html
+++ b/front/login.html
@@ -33,7 +33,7 @@
       <div id="panelLogin">
         <form id="loginForm" class="mb-2">
           <input id="username" class="form-control mb-2" type="text" placeholder="Usuario" required />
-          <input id="password" class="form-control mb-2" type="password" placeholder="Contraseña" required />
+          <input id="password" class="form-control mb-2" type="password" placeholder="Contraseña" required minlength="3" />
           <div id="loginMessage" class="text-danger mb-2" style="display:none;font-size:0.9rem;"></div>
           <button id="loginBtn" class="btn btn-success w-100" type="submit">Ingresar</button>
         </form>
@@ -42,7 +42,7 @@
       <div id="panelRegister" style="display:none;">
         <form id="registerForm" class="mb-2">
           <input id="regUsername" class="form-control mb-2" type="text" placeholder="Usuario" required />
-          <input id="regPassword" class="form-control mb-2" type="password" placeholder="Contraseña (min 3 caracteres)" required />
+          <input id="regPassword" class="form-control mb-2" type="password" placeholder="Contraseña (min 3 caracteres)" required minlength="3" />
           <div id="regMessage" class="text-danger mb-2" style="display:none;font-size:0.9rem;"></div>
           <button id="registerBtn" class="btn btn-primary w-100" type="submit">Crear cuenta</button>
         </form>
