Feature: Se agregan paginas de productos solo dentro de tienda.html

--- a/front/tienda.html
+++ b/front/tienda.html
@@ -50,7 +50,7 @@
   <!-- Card 1 -->
   <div class="col">
     <div class="card h-100">
-      <a href="./producto.html" class="text-decoration-none text-dark">
+      <a href="./producto-jengibre-deshidratado.html" class="text-decoration-none text-dark">
         <img src="./img/agregados/Jengibre.webp" class="card-img-top" alt="Jengibre Deshidratado">
         <div class="card-body">
           <h5 class="card-title">Jengibre Deshidratado (100gr)</h5>
@@ -73,7 +73,7 @@
   <!-- Card 2 -->
   <div class="col">
     <div class="card h-100">
-      <a href="./producto.html" class="text-decoration-none text-dark">
+      <a href="./producto-bombilla.html" class="text-decoration-none text-dark">
         <img src="./img/bombilla/bombilla5.jpeg" class="card-img-top" alt="Bombilla con Filtro Cuchara Larga">
         <div class="card-body">
           <h5 class="card-title">Bombilla con Filtro Cuchara Larga</h5>
@@ -96,7 +96,7 @@
   <!-- Card 3 -->
   <div class="col">
     <div class="card h-100">
-      <a href="./producto.html" class="text-decoration-none text-dark">
+      <a href="./producto-kit.html" class="text-decoration-none text-dark">
         <img src="./img/kits completos de mate/kits completos de mate9.jpeg" class="card-img-top" alt="Kit Matero Verde Militar Premium">
         <div class="card-body">
           <h5 class="card-title">Kit Matero Verde Militar Premium</h5>
@@ -119,10 +119,10 @@
   <!-- Card 4 -->
   <div class="col">
     <div class="card h-100">
-      <a href="./producto.html" class="text-decoration-none text-dark">
+      <a href="./producto-yerba.html" class="text-decoration-none text-dark">
         <img src="./img/yerba/yerba10.jpeg" class="card-img-top" alt="Yerba Jesper a Granel">
         <div class="card-body">
-          <h5 class="card-title">Yerba Jesper a Granel</h5>
+          <h5 class="card-title">Yerba Jesper a Granel (bolsa 10kg)</h5>
           <p class="card-text">
             Yerba mate en presentación de bolsa grande para consumo masivo. Sabor intenso, ideal para bares o familias numerosas.
           </p>
@@ -130,7 +130,7 @@
       </a>
       <div class="card-footer d-flex">
         <div class="w-50 d-flex justify-content-center align-items-center">
-          <strong>$22.000 (bolsa 10kg)</strong>
+          <strong>$22.000</strong>
         </div>
         <div class="w-50 d-flex justify-content-center align-items-center">
           <a class="btn btn-success" href="#" role="button">Comprar</a>
@@ -142,12 +142,12 @@
   <!-- Card 5 -->
   <div class="col">
     <div class="card h-100">
-      <a href="./producto.html" class="text-decoration-none text-dark">
-        <img src="./img/mate/mate10.png" class="card-img-top" alt="Mate de cerámica blanco">
+      <a href="./producto-mate.html" class="text-decoration-none text-dark">
+        <img src="./img/mate/mate7.jpeg" class="card-img-top" alt="Mate de madera">
         <div class="card-body">
-          <h5 class="card-title">Mate de cerámica blanco</h5>
+          <h5 class="card-title">Mate de madera con virola grabada</h5>
           <p class="card-text">
-            Mate de cerámica esmaltada de forma redonda.
+            Mate de madera pulida con virola de alpaca grabada con diseños geométricos.
           </p>
         </div>
       </a>
