--- a/front/producto-bombilla.html
+++ b/front/producto-bombilla.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de Producto</title>
+    <title>Bombilla con Filtro Cuchara Larga</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
@@ -53,34 +53,28 @@
       <!-- Contenedor fijo para la imagen principal -->
       <div class="product-img-wrapper mb-3">
         <img id="imagen-principal" 
-             src="./img/mate/mate7.jpeg" 
-             alt="Mate de Madera" 
+             src="./img/bombilla/bombilla5.jpeg" 
+             alt="Bombilla con Filtro Cuchara Larga" 
              class="product-img">
       </div>
       <hr>
       <!-- Miniaturas -->
       <div class="d-flex gap-2 product-img-miniature">
-        <img src="./img/mate/mate7.jpeg" alt="Mate vista 1" class="img-thumbnail miniatura">
-        <img src="./img/mate/mate1.jpeg" alt="Mate vista 2" class="img-thumbnail miniatura">
-        <img src="./img/mate/mate5.jpeg" alt="Mate vista 3" class="img-thumbnail miniatura">
+        <img src="./img/bombilla/bombilla5.jpeg" alt="Mate vista 1" class="img-thumbnail miniatura">
+        <img src="./img/bombilla/bombilla6.jpeg" alt="Mate vista 2" class="img-thumbnail miniatura">
+        <img src="./img/bombilla/bombilla7.jpeg" alt="Mate vista 3" class="img-thumbnail miniatura">
       </div>
     </div>
 
     <!-- Detalles del producto -->
     <div class="col-md-6">
-      <h1 class="h2">Titulo de producto generico</h1>
-      <p class="h4 text-success fw-bold">$15.000 ARS</p>
+      <h1 class="h2">Bombilla con Filtro Cuchara Larga</h1>
+      <p class="h4 text-success fw-bold">$6.500 ARS</p>
       <p>
-        Descripción del producto
+        Bombilla de acero inoxidable, filtro cuchara alargado y desmontable.
       </p>
 
       <div class="mb-3">
-        <label for="color" class="form-label fw-bold">Color:</label>
-        <select id="color" name="color" class="form-select w-auto">
-          <option value="madera-clara">Madera Clara</option>
-          <option value="madera-oscura">Madera Oscura</option>
-          <option value="madera-natural">Madera Natural</option>
-        </select>
       </div>
 
       <div class="d-flex gap-3">
