--- a/front/producto-mate.html
+++ b/front/producto-mate.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de Producto</title>
+    <title>Mate de madera con virola grabada</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
@@ -68,10 +68,12 @@
 
     <!-- Detalles del producto -->
     <div class="col-md-6">
-      <h1 class="h2">Titulo de producto generico</h1>
+      <h1 class="h2">Mate de Madera con Virola de Acero</h1>
       <p class="h4 text-success fw-bold">$15.000 ARS</p>
       <p>
-        Descripción del producto
+        Este mate de madera está hecho a mano con materiales de alta calidad. 
+        Su virola de acero inoxidable garantiza durabilidad y resistencia. 
+        Perfecto para disfrutar de tus mates en cualquier momento. Incluye bombilla de regalo.
       </p>
 
       <div class="mb-3">
