--- a/front/login.html
+++ b/front/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sesión</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -34,13 +35,32 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="./contacto.html">Contacto</a>
+          <a class="nav-link" href="./quienes-somos.html">Quiénes Somos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./contacto.html">Contacto</a>
         </li>
       </ul>
       <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search"/>
-        <button class="btn btn-outline-success-bg-secondary p-3 text-white" type="button">Buscar</button>
+        <div class="input-group">
+          <span class="input-group-text bg-white border-end-0">
+            <i class="bi bi-search"></i>
+          </span>
+          <input 
+            type="search" 
+            name="buscar" 
+            class="form-control border-start-0" 
+            placeholder="Buscar..." 
+            aria-label="Buscar" 
+            required
+          >
+        </div>
       </form>
+
+      <!-- Icono de usuario (Login) -->
+      <a href="./login.html" class="btn btn-light d-flex align-items-center ms-3 py-1 px-2 small active">
+        <i class="bi bi-person-circle fs-6 me-1"></i> Iniciar Sesión
+      </a>
     </div>
   </div>
 </nav>
