--- a/front/quienes-somos.html
+++ b/front/quienes-somos.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El Club del Mate - Quiénes Somos</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Bootstrap Icons -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
     <style>
         .section-title {
             color: #274226;
@@ -24,48 +23,61 @@
     </style>
 </head>
 <body>
-        <!-- Header y barra de navegación -->
-        <nav class="navbar navbar-expand-lg bg-success navbar-dark p-3">
-            <div class="container-fluid">
-                        <a class="navbar-brand" href="./index.html">
-                            El Club del Mate
-                        </a>
-                                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                                            <span class="navbar-toggler-icon"></span>
-                                        </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="./index.html">Inicio</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Tienda Online
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="./mate.html">Mates</a></li>
-                                <li><a class="dropdown-item" href="./bombilla-mate.html">Bombillas</a></li>
-                                <li><a class="dropdown-item" href="./yerbas.html">Yerbas</a></li>
-                                <li><a class="dropdown-item" href="./agregados.html">Agregados al Mate</a></li>
-                                <li><a class="dropdown-item" href="./kits-completos-para-principiantes.html">Kits completos para principiantes</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="./tienda.html">Todos los productos</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="./quienes-somos.html">Quiénes Somos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./contacto.html">Contacto</a>
-                        </li>
-                    </ul>
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search"/>
-                        <button class="btn btn-outline-success-bg-secondary p-3 text-white" type="button">Buscar</button>
-                    </form>
-                </div>
-            </div>
-        </nav>
+<nav class="navbar navbar-expand-lg bg-success navbar-dark p-3">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="./index.html">El Club del Mate</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="./index.html">Inicio</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Tienda Online
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="./mate.html">Mates</a></li>
+            <li><a class="dropdown-item" href="./bombilla_mate.html">Bombillas</a></li>
+            <li><a class="dropdown-item" href="./yerbas.html">Yerbas</a></li>
+            <li><a class="dropdown-item" href="./agregados.html">Agregados al Mate</a></li>
+            <li><a class="dropdown-item" href="./kits_completos_para_principiantes.html">Kits completos para principiantes</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="./tienda.html">Todos los productos</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="./quienes-somos.html">Quiénes Somos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./contacto.html">Contacto</a>
+        </li>
+      </ul>
+      <form class="d-flex" role="search">
+        <div class="input-group">
+          <span class="input-group-text bg-white border-end-0">
+            <i class="bi bi-search"></i>
+          </span>
+          <input 
+            type="search" 
+            name="buscar" 
+            class="form-control border-start-0" 
+            placeholder="Buscar..." 
+            aria-label="Buscar" 
+            required
+          >
+        </div>
+      </form>
+
+      <!-- Icono de usuario (Login) -->
+      <a href="./login.html" class="btn btn-light d-flex align-items-center ms-3 py-1 px-2 small">
+        <i class="bi bi-person-circle fs-6 me-1"></i> Iniciar Sesión
+      </a>
+    </div>
+  </div>
+</nav>
 
     <!-- Sección principal con imagen de fondo -->
     <main>
